--- a/index.html
+++ b/index.html
@@ -553,12 +553,12 @@
 
           <div class="services__modal">
             <div class="services__modal-content">
-              <h4 class="services__modal-title">Frontend<br />Developer</h4>
+              <h4 class="services__modal-title">Android <br />Developer</h4>
               <i class="uil uil-times services__modal-close"></i>
               <ul class="services__modal-services grid">
                 <li class="services__modal-service">
                   <i class="uil uil-check-circle services__modal-icon"></i>
-                  <p>I develop web applications</p>
+                  <p>I develop android applications</p>
                 </li>
                 <li class="services__modal-service">
                   <i class="uil uil-check-circle services__modal-icon"></i>
@@ -630,7 +630,7 @@
           <!--==================== PORTFOLIO 1====================-->
           <div class="portfolio__content grid swiper-slide">
             <img
-              src="/assets/img/portfolio/unichat.PNG"
+              src=""
               alt=""
               class="portfolio__img"
             />
@@ -640,7 +640,7 @@
                 Chat app created using react, firebase and chat-engine.
               </p>
               <a
-                href="https://github.com/rawatanimesh/react-chat-app"
+                href=""
                 target="_blank"
                 class="button button--flex button--small portfolio__button"
               >
@@ -653,7 +653,7 @@
           <!--==================== PORTFOLIO 2====================-->
           <div class="portfolio__content grid swiper-slide">
             <img
-              src="/assets/img/portfolio/track-service-request.PNG"
+              src=""
               alt=""
               class="portfolio__img"
             />
@@ -664,7 +664,7 @@
                 progress.
               </p>
               <a
-                href="https://github.com/rawatanimesh/angular-workflow-track-service-request-graph"
+                href=""
                 target="_blank"
                 class="button button--flex button--small portfolio__button"
               >
@@ -677,7 +677,7 @@
           <!--==================== PORTFOLIO 3====================-->
           <div class="portfolio__content grid swiper-slide">
             <img
-              src="/assets/img/portfolio/stopwatch.png"
+              src=""
               alt=""
               class="portfolio__img"
             />
@@ -688,7 +688,7 @@
                 external libraries/dependencies.
               </p>
               <a
-                href="https://github.com/rawatanimesh/react-chat-app"
+                href=""
                 target="_blank"
                 class="button button--flex button--small portfolio__button"
               >
@@ -701,7 +701,7 @@
           <!--==================== PORTFOLIO 4====================-->
           <div class="portfolio__content grid swiper-slide">
             <img
-              src="/assets/img/portfolio/file-reader.png"
+              src=""
               alt=""
               class="portfolio__img"
             />
@@ -712,7 +712,7 @@
                 libraries/dependencies.
               </p>
               <a
-                href="https://github.com/rawatanimesh/angular-file-reader"
+                href=""
                 target="_blank"
                 class="button button--flex button--small portfolio__button"
               >
@@ -752,7 +752,7 @@
             </a>
           </div>
 
-          <img src="/assets/img/travel-pic3.png" alt="" class="project__img" />
+          <img src="" alt="" class="project__img" />
         </div>
       </div>
     </section>
