Updated index.html and removed images

--- a/public/index.html
+++ b/public/index.html
@@ -752,7 +752,7 @@
             </a>
           </div>
 
-          <img src="/assets/img/travel-pic3.png" alt="" class="project__img" />
+          <img src="" alt="" class="project__img" />
         </div>
       </div>
     </section>
