--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
         <div class="services__content">
           <div>
             <i class="uil uil-arrow services__icon"></i>
-            <h3 class="services__title">Frontend<br />Developer</h3>
+            <h3 class="services__title">Android<br />Developer</h3>
           </div>
 
           <span
@@ -558,11 +558,11 @@
               <ul class="services__modal-services grid">
                 <li class="services__modal-service">
                   <i class="uil uil-check-circle services__modal-icon"></i>
-                  <p>I develop android applications</p>
+                  <p>I implement android applications</p>
                 </li>
                 <li class="services__modal-service">
                   <i class="uil uil-check-circle services__modal-icon"></i>
-                  <p>I handle website hosting</p>
+                  <p>I deploy website hosting</p>
                 </li>
                 <li class="services__modal-service">
                   <i class="uil uil-check-circle services__modal-icon"></i>
@@ -581,7 +581,7 @@
         <div class="services__content">
           <div>
             <i class="uil uil-mobile-android services__icon"></i>
-            <h3 class="services__title">Hybrid App<br />Developer</h3>
+            <h3 class="services__title">IoT <br />Developer</h3>
           </div>
 
           <span
@@ -593,7 +593,7 @@
 
           <div class="services__modal">
             <div class="services__modal-content">
-              <h4 class="services__modal-title">Hybrid App<br />Developer</h4>
+              <h4 class="services__modal-title">IoT<br />Developer</h4>
               <i class="uil uil-times services__modal-close"></i>
               <ul class="services__modal-services grid">
                 <li class="services__modal-service">
@@ -635,12 +635,12 @@
               class="portfolio__img"
             />
             <div class="portfolio__data">
-              <h3 class="portfolio__title">Chat Application</h3>
+              <h3 class="portfolio__title">Online Food Ordering Application</h3>
               <p class="portfolio__description">
-                Chat app created using react, firebase and chat-engine.
+                Food Ordering app created using android and Java.
               </p>
               <a
-                href=""
+                href="https://play.google.com/store/apps/details?id=com.subway.mobile.subwayapp03&hl=en&gl=US"
                 target="_blank"
                 class="button button--flex button--small portfolio__button"
               >
