Domain name updated

--- a/public/index.html
+++ b/public/index.html
@@ -839,10 +839,10 @@
           <div class="footer__socials">
             <a
               href="#home"
-              target="_blank"
-              class="footer__social"
+        
+              class="nav__link noSelect"
             >
-              <i class="uil uil-angle-double-up"></i>
+              <i class="uil uil-angle-double-up nav__icon"></i>
             </a>
             </div>
         <div class="footer__socials">
