--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
             <a
               href="#home"
               target="_blank"
-              class="footer__social"
+              class="nav__link"
             >
               <i class="uil uil-angle-double-up"></i>
             </a>
