--- a/index.html
+++ b/index.html
@@ -222,11 +222,10 @@
             </div> -->
 
             <div class="home__data">
-              <h1 class="home__title">Hi, I am Pavitha</h1>
-              <h3 class="home__subtitle">Sotware Developer</h3>
+              <h1 class="home__title">Hello, I am Pavitha</h1>
+              <h3 class="home__subtitle">Sotware Engineer  </h3>
               <p class="home__description">
-                I am a passionate coder with an eye for detail and a focus to
-                produce quality work.
+                with passion to design and build large-scale high-performance products.
               </p>
               <a href="#contact" class="button button--flex">
                 Contact Me<i class="uil uil-message button__icon"></i>
@@ -255,12 +254,10 @@
 
         <div class="about__data">
           <p class="about__description">
-            I have 6 years of experience and extensive knowledge in android
-            Development. I work on different of android technologies, modern
-            libraries and frameworks. <br />
-            I love to keep updating my tech stack with latest and greatest
-            technologies and lately I taken a keen interest in cloud technologies and IoT. I keep on
-            tying new ways to implement automation in my projects.
+            Over 6+ years of experience in software development and scalable android applications design. Experienced in Java, android frameworks, libraries, and SDK Development.
+            Loves to explore the latest technologies and edge technologies. Skilled with cloud technologies, IoT and Blockchain and built 10+ projects with scalable backend. Currently focusing on building a new project in IoT and Cloud for large highly reliable and scalable systems.                            
+            
+              
           </p>
           <div class="about__info">
             <div>
@@ -346,8 +343,8 @@
         <div class="skills__container-box">
           <img
             class="skills__container-img"
-            src=""
-            alt=""
+            src="/assets/img/skills/html.svg"
+            alt="html"
           />
           <div class="skills__container-name">SQL</div>
         </div>
