--- a/public/index.html
+++ b/public/index.html
@@ -346,8 +346,8 @@
         <div class="skills__container-box">
           <img
             class="skills__container-img"
-            src=""
-            alt=""
+            src="/assets/img/skills/html.svg"
+            alt="html"
           />
           <div class="skills__container-name">SQL</div>
         </div>
