--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         <div class="skills__container-box">
           <img
             class="skills__container-img"
-            src=""
+            src="/assets/img/skills/html.svg"
             alt=""
           />
           <div class="skills__container-name">HTML</div>
@@ -343,8 +343,9 @@
         <div class="skills__container-box">
           <img
             class="skills__container-img"
-            src="/assets/img/skills/html.svg"
-            alt="html"
+            src="/assets/img/skills/html.svg" 
+            
+            alt=""
           />
           <div class="skills__container-name">SQL</div>
         </div>
