--- a/public/index.html
+++ b/public/index.html
@@ -308,83 +308,83 @@
       <span class="section__subtitle">My tech stack</span>
       <div class="skills__container container grid">
         <div class="skills__container-box">
-          <img
+          <!-- <img
             class="skills__container-img"
             src=""
             alt=""
-          />
+          /> -->
           <div class="skills__container-name">Android</div>
         </div>
 
         <div class="skills__container-box">
-          <img
+          <!-- <img
             class="skills__container-img"
             src=""
             alt=""
-          />
+          /> -->
           <div class="skills__container-name">Java</div>
         </div>
 
         <div class="skills__container-box">
-          <img
+          <!-- <img
             class="skills__container-img"
             src=""
             alt=""
-          />
+          /> -->
           <div class="skills__container-name">Python</div>
         </div>
 
         <div class="skills__container-box">
-          <img
+          <!-- <img
             class="skills__container-img"
             src=""
             alt=""
-          />
+          /> -->
           <div class="skills__container-name">HTML</div>
         </div>
 
         <div class="skills__container-box">
-          <img
+          <!-- <img
             class="skills__container-img"
             src="/assets/img/skills/html.svg"
             alt="html"
-          />
+          /> -->
           <div class="skills__container-name">SQL</div>
         </div>
 
         <div class="skills__container-box">
-          <img
+          <!-- <img
             class="skills__container-img"
             src=""
             alt=""
-          />
+          /> -->
           <div class="skills__container-name">NO SQL</div>
         </div>
 
         <div class="skills__container-box">
-          <img
+          <!-- <img
             class="skills__container-img"
             src=""
             alt=""
-          />
+          /> -->
           <div class="skills__container-name">IoT</div>
         </div>
 
         <div class="skills__container-box">
-          <img
+          <!-- <img
             class="skills__container-img"
             src=""
             alt=""
-          />
+          /> -->
           <div class="skills__container-name">Distributed Systems</div>
         </div>
 
         <div class="skills__container-box">
-          <img
+          <!-- <img
             class="skills__container-img"
             src=""
             alt=""
-          />
+          /> -->
           <div class="skills__container-name">AWS</div>
         </div>
 
