--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-44V9QEHL9J"
+      src="https://www.googletagmanager.com/gtag/js?id=G-Q47HVHX0Z4"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
