analytics id updated

--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-44V9QEHL9J");
+      gtag("config", "G-Q47HVHX0Z4");
     </script>
   </head>
 
