--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
             <div class="portfolio__data">
               <h3 class="portfolio__title">Online Food Ordering Application</h3>
               <p class="portfolio__description">
-                Online Food Ordering app implemented using android and Java.
+               Implemented Online Food Ordering android app using Java.
               </p>
               <a
                 href="https://play.google.com/store/apps/details?id=com.subway.mobile.subwayapp03&hl=en&gl=US"
