--- a/index.html
+++ b/index.html
@@ -502,22 +502,7 @@
               </div>
             </div>
 
-            <!--==================== QUALIFICATOIN 4====================-->
-            <!-- <div class="qualification__data">
-              <div></div>
-              <div>
-                <span class="qualification__rounder"></span>
-                
-              </div>
-              <div>
-                <h3 class="qualification__title">UI/UX Engineer</h3>
-                <span class="qualification__subtitle"> Rakuten </span>
-                <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2020-2022
-                </div>
-              </div>
-            </div> -->
-          </div>
+         
 
           <!--==================== QUALIFICATOIN CONTENT 2====================-->
           <div class="qualification__content" data-content id="education">
@@ -716,7 +701,7 @@
                 Designed and implemented an automatic sprinkler system based on soil and air parameters, with information coming from embedded sensors.
               </p>
               <a
-                href="#"
+                href="https://gitfront.io/r/Pavithapichai/GH8ns5G1dfX6/Agri-Tech-Farm-Water-Management.git"
                 target="_blank"
                 class="button button--flex button--small portfolio__button"
               >
