--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                 Designed and implemented an automatic sprinkler system based on soil and air parameters, with information coming from embedded sensors.
               </p>
               <a
-                href="https://gitfront.io/r/Pavithapichai/GH8ns5G1dfX6/Agri-Tech-Farm-Water-Management.git"
+                href="https://gitfront.io/r/Pavithapichai/GH8ns5G1dfX6/Agri-Tech-Farm-Water-Management/"
                 target="_blank"
                 class="button button--flex button--small portfolio__button"
               >
