--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-44V9QEHL9J"
+      src="https://www.googletagmanager.com/gtag/js?id=G-Q47HVHX0Z4"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -92,7 +92,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-44V9QEHL9J");
+      gtag("config", "G-Q47HVHX0Z4");
     </script>
   </head>
 
@@ -186,6 +186,13 @@
               >
                 <i class="uil uil-github-alt"></i>
               </a>
+              <a
+              href="https://leetcode.com/pavithapichai/"
+              target="_blank"
+              class="home__social-icon"
+            >
+            <i class="cib-leetcode"></i>
+            </a>
               <!-- <a
                 href="https://t.me/rawatanimesh"
                 target="_blank"
