--- a/index.html
+++ b/index.html
@@ -460,8 +460,7 @@
           <div
             class="qualification__content qualification__active"
             data-content
-            id="work"
-          >
+            id="work">
             <!--==================== QUALIFICATOIN 1====================-->
             <div class="qualification__data">
               <div>
@@ -493,7 +492,7 @@
                 </div>
               </div>
             </div>
-
+            
             <!--==================== QUALIFICATOIN 3====================-->
             <div class="qualification__data">
               <div>
@@ -509,7 +508,7 @@
               </div>
             </div>
 
-         
+          </div>
 
           <!--==================== QUALIFICATOIN CONTENT 2====================-->
           <div class="qualification__content" data-content id="education">
