--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
               <div>
                 <h3 class="qualification__title">Advanced Software Engineering On Cloud,IoT and Blockchain</h3>
                 <span class="qualification__subtitle">
-                  IIT, Madras
+                  IIT, Madras [https://olympus1.mygreatlearning.com/certificate/FFGKSAKT](Certificate Link)
                 </span>
                 <div class="qualification__calender">
                   <i class="uil uil-calendar-alt"></i> 2021-2022
