--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
               <div>
                 <h3 class="qualification__title">Advanced Software Engineering On Cloud,IoT and Blockchain</h3>
                 <span class="qualification__subtitle">
-                  IIT, Madras 
+                  IIT, Madras \n
                   <a href="https://olympus1.mygreatlearning.com/certificate/FFGKSAKT">Certificate Link</a>
 
    
