--- a/index.html
+++ b/index.html
@@ -517,8 +517,11 @@
               <div>
                 <h3 class="qualification__title">Advanced Software Engineering On Cloud,IoT and Blockchain</h3>
                 <span class="qualification__subtitle">
-                  IIT, Madras \n
+                  IIT, Madras 
+                  <div class="qualification__calender">
                   <a href="https://olympus1.mygreatlearning.com/certificate/FFGKSAKT">Certificate Link</a>
+                </div>
+                  
 
    
                 </span>
