--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               </a> -->
             </div>
             
-            <!-- <div class="home__img">
+             <div class="home__img">
               
               <svg
                 class="home__blob"
@@ -232,7 +232,7 @@
                   ></image>
                 </g>
               </svg>
-            </div>  -->
+            </div>  
 
             <div class="home__data">
               <h1 class="home__title">Hello, I am Pavitha</h1>
