--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
         <div class="about__data">
           <p class="about__description">
-            Over 6+ years of experience in software development and scalable android applications design. Experienced in Java, android frameworks, libraries, and SDK Development.
+            Over 8+ years of experience in software development and scalable android applications design. Experienced in Java, android frameworks, AOSP , libraries, and SDK Development.
             Loves to explore the latest technologies and edge technologies. Skilled with cloud technologies, IoT and Blockchain and built 10+ projects with scalable backend. Currently focusing on building a new project in IoT and Cloud for large highly reliable and scalable systems.                            
             
               
