--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           </p>
           <div class="about__info">
             <div>
-              <span class="about__info-title">06+</span>
+              <span class="about__info-title">08+</span>
               <span class="about__info-name"
                 >Years <br />
                 experience</span
@@ -254,7 +254,7 @@
             </div>
 
             <div>
-              <span class="about__info-title">20+</span>
+              <span class="about__info-title">21+</span>
               <span class="about__info-name"
                 >Projects <br />
                 completed</span
@@ -262,7 +262,7 @@
             </div>
 
             <div>
-              <span class="about__info-title">03+</span>
+              <span class="about__info-title">04</span>
               <span class="about__info-name"
                 >Companies <br />
                 worked</span
@@ -313,7 +313,7 @@
             src=""
             alt=""
           /> -->
-          <div class="skills__container-name">Python</div>
+          <div class="skills__container-name">Kotlin</div>
         </div>
 
         <div class="skills__container-box">
@@ -322,7 +322,7 @@
             src="/assets/img/skills/html.svg"
             alt=""
           /> -->
-          <div class="skills__container-name">HTML</div>
+          <div class="skills__container-name">Python</div>
         </div>
 
         <div class="skills__container-box">
@@ -368,7 +368,7 @@
             src=""
             alt=""
           /> -->
-          <div class="skills__container-name">Kotlin</div>
+          <div class="skills__container-name">HTML</div>
           
         </div>
         <div class="skills__container-box">
@@ -433,7 +433,23 @@
             class="qualification__content qualification__active"
             data-content
             id="work">
-            <!--==================== QUALIFICATOIN 1====================-->
+
+             <!--==================== QUALIFICATOIN 1====================-->
+            <div class="qualification__data">
+              <div>
+                <h3 class="qualification__title">Senior Software Engineer </h3>
+                <span class="qualification__subtitle"> Zealogics </span>
+                <div class="qualification__calender">
+                  <i class="uil uil-calendar-alt"></i> 2023 - till now
+                </div>
+              </div>
+
+              <div>
+                <span class="qualification__rounder"></span>
+                <span class="qualification__line"></span>
+              </div>
+            </div>
+            <!--==================== QUALIFICATOIN 2====================-->
             <div class="qualification__data">
               <div>
                 <h3 class="qualification__title">Software Development Engineer - Android</h3>
@@ -449,7 +465,7 @@
               </div>
             </div>
 
-            <!--==================== QUALIFICATOIN 2====================-->
+            <!--==================== QUALIFICATOIN 3====================-->
             <div class="qualification__data">
               <div></div>
               <div>
@@ -465,7 +481,7 @@
               </div>
             </div>
             
-            <!--==================== QUALIFICATOIN 3====================-->
+            <!--==================== QUALIFICATOIN 4====================-->
             <div class="qualification__data">
               <div>
                 <h3 class="qualification__title">Android Developer</h3>
@@ -638,7 +654,7 @@
                Implemented Online Food Ordering android app using Java.
               </p>
               <a
-                href="https://play.google.com/store/apps/details?id=com.subway.mobile.subwayapp03&hl=en&gl=US"
+                href="https://play.google.com/store/apps/details?id=com.subway.mobile.subwayapp03&pcampaignid=web_share"
                 target="_blank"
                 class="button button--flex button--small portfolio__button"
               >
@@ -656,13 +672,12 @@
               class="portfolio__img"
             />
             <div class="portfolio__data">
-              <h3 class="portfolio__title">Online training and assessment app </h3>
+              <h3 class="portfolio__title"> Research and Development on Peritoneal Dialysis Device </h3>
               <p class="portfolio__description">
-                Android app built to provide knowledge of auto mobile products to its sales executive.
-                Conducts training and released assessment through app and admin can view and keep track of staffs performance easily. 
+                Implemented treatment features for Automated Peritoneal Dialysis Device for real-time monitoring and control of the device.
               </p>
               <a
-                href="https://play.google.com/store/apps/details?id=com.ttiglobal.suzuki"
+                href=""
                 target="_blank"
                 class="button button--flex button--small portfolio__button"
               >
